# extensions

./: README.md  dev.itsjamie9494.Extensions.json  dev.jamiethalacker.Extensions.json  meson.build  window.ui
data/: dev.itsjamie9494.Extensions.appdata.xml.in  dev.itsjamie9494.Extensions.desktop.in  dev.itsjamie9494.Extensions.gresource.xml  dev.itsjamie9494.Extensions.gschema.xml  dev.jamiethalacker.Extensions.appdata.xml.in  dev.jamiethalacker.Extensions.desktop.in  dev.jamiethalacker.Extensions.gresource.xml  dev.jamiethalacker.Extensions.gschema.xml  meson.build  style.css
data/icons/: meson.build
data/ui/: details.ui  explore.ui  more_info.ui  row.ui  search.ui  window.ui
po/: POTFILES  meson.build
src/: application.vala  meson.build  screenshot_cache.vala  window.vala
src/objects/: explore_extension_object.vala
src/services/: dbus_extensions_service.vala  soup_client_service.vala  thread_service.vala
src/widgets/: details.vala  explore.vala  explore_row.vala  more_info.vala  row.vala  search.vala
